--- a/Frontend/src/pages/Home.css
+++ b/Frontend/src/pages/Home.css
@@ -287,9 +287,9 @@ body {
   border-color: transparent transparent transparent white;
 }
 
-.video-source {
+/* .video-source {
   position: absolute;
-  top: 8px;
+  top: 80px;
   left: 8px;
   background-color: rgba(0, 0, 0, 0.7);
   color: var(--text-white);
@@ -300,7 +300,7 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
+} */
 
 .video-info {
   padding: 12px;
