--- a/Frontend/src/components/VideoCard.css
+++ b/Frontend/src/components/VideoCard.css
@@ -3,8 +3,8 @@
 :root {
   --ph-black: #0a0a0a;
   --ph-dark-gray: #1a1a1a;
-  --ph-orange: #ff9000;
-  --ph-bright-orange: #f90;
+  --ph-orange: #FF1493;
+  --ph-bright-orange: #FF1493;
   --ph-light-gray: #2c2c2c;
   --ph-text: #ffffff;
   --ph-text-secondary: #cccccc;
