--- a/Frontend/src/pages/Home.css
+++ b/Frontend/src/pages/Home.css
@@ -4,8 +4,8 @@
   --dark-gray: #1a1a1a;
   --medium-gray: #2a2a2a;
   --light-gray: #333333;
-  --orange: #ff9000;
-  --orange-hover: #ffb347;
+  --orange: #FF1493;
+  --orange-hover: #FF1493;
   --text-white: #ffffff;
   --text-gray: #cccccc;
   --text-light-gray: #999999;
